--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <base href="/portfolio2015">
     <meta name="viewport" content="wioh dth=device-width,initial-scale=1">
     <title>Sample App</title>
   </head>
