bug fix, scroll, animation

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
-    <base href="/portfolio2015">
+    <base href="/portfolioReact">
     <meta name="viewport" content="wioh dth=device-width,initial-scale=1">
-    <title>Sample App</title>
+    <title>Mike Johnson</title>
+    <!-- <base href="/portfolioReact"> -->
+
   </head>
   <body>
     <div id='app'>
