--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
 
     <meta name="viewport" content="wioh dth=device-width,initial-scale=1">
-    <title>Mike Johnson - UX Engineer</title>
+    <title>Mike Johnson - UX Engineer from Seattle</title>
     <base href="/portfolioReact">
   </head>
   <body>
