--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
   <head>
     <meta name="viewport" content="wioh dth=device-width,initial-scale=1">
     <title>Mike Johnson - UX Engineer from Seattle</title>
-    <base href="/portfolioReact">
+    <base href="/portfolio">
   </head>
   <body>
     <div id='app'></div>
-    <script src="bundle.js"></script>
+    <script src="/static/bundle.js"></script>
 
   </body>
 </html>
